Improve code readability by using `var` and `isBlank`
Co-authored-by: Veselin Nikolov <veselin.nikolov@neotechnology.com>